--- a/addressbook/templates/addressbook/addressbooklist_create.html
+++ b/addressbook/templates/addressbook/addressbooklist_create.html
@@ -1,5 +1,5 @@
 {% load crispy_forms_tags %}
-<form method="post" data-url="{% url 'addressbooklist_create' %}" class="create-form">
+<form method="post" action="{% url 'addressbooklist_create' %}" class="create-form">
   {% csrf_token %}
   <div class="modal-header">
     <h5 class="modal-title" id="exampleModalLabel">Address Book List - Create</h5>
