--- a/addressbook/templates/addressbook/addressbooklist_delete.html
+++ b/addressbook/templates/addressbook/addressbooklist_delete.html
@@ -1,5 +1,5 @@
 {% load crispy_forms_tags %}
-<form method="post" data-url="{% url 'addressbooklist_delete' object.id %}" class="delete-form">
+<form method="post" action="{% url 'addressbooklist_delete' object.id %}" class="delete-form">
   {% csrf_token %}
   <div class="modal-header">
     <h5 class="modal-title" id="exampleModalLabel">Address Book List - Confirm Delete </h5>
