--- a/addressbook/templates/addressbook/addressbooklist_delete.html
+++ b/addressbook/templates/addressbook/addressbooklist_delete.html
@@ -11,7 +11,7 @@
      Are you sure you want to delete <strong>"{{ object.fname }} {{ object.lname }}"</strong> ? 
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" data-dismiss="modal">Back</button>
+    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
     <button type="submit" class="btn btn-danger">Delete</button>
   </div>
 </form>
